--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "eslint-plugin-jest": "^22.1.2",
     "htmlhint": "^0.10.1",
     "jest": "^23.6.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverage": true
   }
 }
